1.Added download entry for neuron model with batch_size = 8 2. Benchmarked neuron models with batch_size = 1,2,4,8

--- a/example/transform/huggingface_model_benchmark_neuron.ipynb
+++ b/example/transform/huggingface_model_benchmark_neuron.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,52 +45,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://pip.repos.neuron.amazonaws.com\n",
-      "Requirement already satisfied: transformers in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (4.36.2)\n",
-      "Collecting accelerate\n",
-      "  Downloading accelerate-0.25.0-py3-none-any.whl.metadata (18 kB)\n",
-      "Collecting bitsandbytes\n",
-      "  Downloading bitsandbytes-0.41.3.post2-py3-none-any.whl.metadata (9.8 kB)\n",
-      "Requirement already satisfied: scipy in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (1.10.1)\n",
-      "Requirement already satisfied: filelock in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (3.13.1)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.19.3 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (0.20.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (1.24.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (21.3)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (6.0.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (2023.12.25)\n",
-      "Requirement already satisfied: requests in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (2.31.0)\n",
-      "Requirement already satisfied: tokenizers<0.19,>=0.14 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (0.15.0)\n",
-      "Requirement already satisfied: safetensors>=0.3.1 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (0.4.1)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from transformers) (4.66.1)\n",
-      "Requirement already satisfied: psutil in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from accelerate) (5.9.7)\n",
-      "Requirement already satisfied: torch>=1.10.0 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from accelerate) (1.13.1)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (2023.12.2)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (4.9.0)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from packaging>=20.0->transformers) (3.1.1)\n",
-      "Requirement already satisfied: nvidia-cuda-runtime-cu11==11.7.99 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from torch>=1.10.0->accelerate) (11.7.99)\n",
-      "Requirement already satisfied: nvidia-cudnn-cu11==8.5.0.96 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from torch>=1.10.0->accelerate) (8.5.0.96)\n",
-      "Requirement already satisfied: nvidia-cublas-cu11==11.10.3.66 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from torch>=1.10.0->accelerate) (11.10.3.66)\n",
-      "Requirement already satisfied: nvidia-cuda-nvrtc-cu11==11.7.99 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from torch>=1.10.0->accelerate) (11.7.99)\n",
-      "Requirement already satisfied: setuptools in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from nvidia-cublas-cu11==11.10.3.66->torch>=1.10.0->accelerate) (69.0.3)\n",
-      "Requirement already satisfied: wheel in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from nvidia-cublas-cu11==11.10.3.66->torch>=1.10.0->accelerate) (0.42.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from requests->transformers) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from requests->transformers) (3.6)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from requests->transformers) (1.26.18)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/aws_neuron_venv_pytorch/lib/python3.8/site-packages (from requests->transformers) (2023.11.17)\n",
-      "Downloading accelerate-0.25.0-py3-none-any.whl (265 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m265.7/265.7 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading bitsandbytes-0.41.3.post2-py3-none-any.whl (92.6 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.6/92.6 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m0:00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: bitsandbytes, accelerate\n",
-      "Successfully installed accelerate-0.25.0 bitsandbytes-0.41.3.post2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!{sys.executable} -m pip install -q transformers accelerate bitsandbytes scipy"
    ]
@@ -104,29 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "from IPython.display import display\n",
-    "\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformHuggingFaceConfig, HuggingfaceModelConfig\n",
     "from uniflow.op.prompt import PromptTemplate, Context\n",
-    "\n",
-    "load_dotenv()"
+    "import time"
    ]
   },
   {
@@ -140,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample size of raw context:  400\n"
+      "sample size of raw context:  1000\n"
      ]
     }
    ],
@@ -206,9 +146,9 @@
     "critical value to obtain a p-value. \"\"\"\n",
     "]\n",
     "\n",
-    "raw_context_input_400 = raw_context_input * 100\n",
+    "raw_context_input = raw_context_input * 250\n",
     "\n",
-    "print(\"sample size of raw context: \", len(raw_context_input_400))"
+    "print(\"sample size of raw context: \", len(raw_context_input))"
    ]
   },
   {
@@ -220,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample size of processed input data:  400\n"
+      "sample size of processed input data:  1000\n"
      ]
     },
     {
@@ -237,7 +177,7 @@
        " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +186,7 @@
     "\n",
     "input_data = [\n",
     "    Context(context=data)\n",
-    "    for data in raw_context_input_400\n",
+    "    for data in raw_context_input\n",
     "]\n",
     "\n",
     "print(\"sample size of processed input data: \", len(input_data))\n",
@@ -269,22 +209,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model chunks found. If you encounter errors, please delete the cache folder `/home/ubuntu/.cache/uniflow/Mistral-7B-Instruct-v0.2-split`\n",
+      "Neuron model does not support quantized models. load_in_4bit and load_in_8bit are automatically set to False.\n",
+      "Spliting model, need to wait for a while...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "config.json: 100%|██████████| 596/596 [00:00<00:00, 4.32MB/s]\n",
+      "model.safetensors.index.json: 100%|██████████| 25.1k/25.1k [00:00<00:00, 80.0MB/s]\n",
+      "model-00001-of-00003.safetensors: 100%|██████████| 4.94G/4.94G [00:20<00:00, 239MB/s]\n",
+      "model-00002-of-00003.safetensors: 100%|██████████| 5.00G/5.00G [00:20<00:00, 243MB/s]\n",
+      "model-00003-of-00003.safetensors: 100%|██████████| 4.54G/4.54G [00:17<00:00, 265MB/s]\n",
+      "Downloading shards: 100%|██████████| 3/3 [00:58<00:00, 19.59s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:01<00:00,  1.92it/s]\n",
+      "generation_config.json: 100%|██████████| 111/111 [00:00<00:00, 899kB/s]\n",
+      "100%|██████████| 161M/161M [00:01<00:00, 100MiB/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.cache/uniflow/10b481c5b2f1e3054ca092027443b1a2.zip /home/ubuntu/.cache/uniflow/10b481c5b2f1e3054ca092027443b1a2\n",
       "loading neuron model from cache, need to wait for a while...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tokenizer_config.json: 100%|██████████| 1.46k/1.46k [00:00<00:00, 11.4MB/s]\n",
+      "tokenizer.model: 100%|██████████| 493k/493k [00:00<00:00, 14.8MB/s]\n",
+      "tokenizer.json: 100%|██████████| 1.80M/1.80M [00:00<00:00, 12.4MB/s]\n",
+      "special_tokens_map.json: 100%|██████████| 72.0/72.0 [00:00<00:00, 699kB/s]\n"
      ]
     }
    ],
    "source": [
     "config = TransformHuggingFaceConfig(\n",
     "    prompt_template=guided_prompt,\n",
-    "    model_config=HuggingfaceModelConfig(batch_size=4, model_name='mistralai/Mistral-7B-Instruct-v0.2', neuron=True))\n",
+    "    model_config=HuggingfaceModelConfig(batch_size=8, model_name='mistralai/Mistral-7B-Instruct-v0.2', neuron=True))\n",
     "client = TransformClient(config)"
    ]
   },
@@ -297,11 +270,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/125 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-Feb-27 06:44:35.0604 2332:2749 [1] nccl_net_ofi_init:1415 CCOM WARN NET/OFI aws-ofi-nccl initialization failed\n",
+      "2024-Feb-27 06:44:35.0604 2332:2749 [1] init.cc:137 CCOM WARN OFI plugin initNet() failed is EFA enabled?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 125/125 [10:14<00:00,  4.92s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "output = client.run(input_data)"
+    "start_time = time.time()\n",
+    "output = client.run(input_data)\n",
+    "execution_time = time.time() - start_time"
    ]
   },
   {
@@ -332,12 +330,11 @@
       "            'trademarks, inventions, innovations and designs that we deem '\n",
       "            'valuable. W e also continue to vigorously protect our '\n",
       "            'intellectual property, including trademarks, patents and trade '\n",
-      "            'secrets against third-party infringement and misappropriation.',\n",
-      " 'question': ' Which intellectual property rights does the company actively '\n",
-      "             'seek and protect?\\n',\n",
-      " 'answer': ' The company actively seeks and protects intellectual property '\n",
-      "           'rights such as trademarks, utility and design patents, copyrights, '\n",
-      "           'and trade secrets.'}\n"
+      "            'secrets against third-party infringement and misappropriation. ',\n",
+      " 'question': ' What types of intellectual property does the company protect?\\n',\n",
+      " 'answer': ' The company protects various intellectual property rights, '\n",
+      "           'including trademarks, utility and design patents, copyrights, and '\n",
+      "           'trade secrets.'}\n"
      ]
     }
    ],
@@ -360,6 +357,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_tokens(document):\n",
+    "    ''' \n",
+    "    Give a document(string), return total number of tokens(words)\n",
+    "\n",
+    "    Parameters:\n",
+    "       documents(string): A document\n",
+    "\n",
+    "    Returns:\n",
+    "       count(int): Total number of tokens. 1 token = 0.75 word\n",
+    "    '''\n",
+    "    num_words = len(document.split())\n",
+    "    num_tokens = round(num_words/0.75)\n",
+    "    return num_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output tokens:  131263\n",
+      "input tokens:  76000\n",
+      "prompt tokens:  36\n",
+      "total tokens:  207299\n",
+      "processed tokens per second:  337\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count tokens\n",
+    "input_tokens = sum(count_tokens(d) for d in raw_context_input)\n",
+    "prompt_tokens = count_tokens(config.prompt_template.instruction)\n",
+    "output_tokens = 0\n",
+    "for o in output:\n",
+    "    if \"output\" in o:\n",
+    "        for response in o[\"output\"]:\n",
+    "            for r in response[\"response\"]:\n",
+    "                segments = [segment for segment in re.split(pattern, r) if segment.strip()]\n",
+    "                result = {\n",
+    "                    \"context\": segments[-3],\n",
+    "                    \"question\": segments[-2],\n",
+    "                    \"answer\": segments[-1]\n",
+    "                }\n",
+    "                output_tokens += count_tokens(result[\"context\"])\n",
+    "                output_tokens += count_tokens(result[\"question\"])\n",
+    "                output_tokens += count_tokens(result[\"answer\"])\n",
+    "\n",
+    "tokens = input_tokens + prompt_tokens + output_tokens\n",
+    "print(\"output tokens: \", output_tokens)\n",
+    "print(\"input tokens: \", input_tokens)\n",
+    "print(\"prompt tokens: \",prompt_tokens)\n",
+    "print(\"total tokens: \", tokens)\n",
+    "print(\"processed tokens per second: \", round(float(tokens/execution_time)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,13 +433,45 @@
     "\n",
     "## Appendix\n",
     "\n",
-    "We benchmarked to see the optimal `batch_size` for the `HuggingfaceModelConfig` flow. The answer is \"It depends on your data token length, your instance type, your LLM size, etc.\" In the following experiment, we use an AWS inf2.8xlarge. We still use the above 400 raw data strings `raw_context_input_400`.\n",
+    "We benchmarked to see the optimal `batch_size` for the `HuggingfaceModelConfig` flow. The answer is \"It depends on your data token length, your instance type, your LLM size, etc.\" In the following experiment, we use an AWS inf2.8xlarge. We still use the above 1000 raw data strings `raw_context_input`.\n",
     "\n",
     "\n",
     "Here are the results:\n",
     "\n",
-    "- batch_size = 4\n",
-    "    100%|██████████| 100/100 [07:10<00:00, 4.66s/it]\n"
+    "- batch_size = 1             \n",
+    "    100%|██████████| 1000/1000 [5:11:19<00:00, 18.68s/it]         \n",
+    "    output tokens:  364189    \n",
+    "    input tokens:  76000    \n",
+    "    prompt tokens:  36   \n",
+    "    total tokens:  440225   \n",
+    "    processed tokens per second:  24   \n",
+    "\n",
+    "- batch_size = 2         \n",
+    "    100%|██████████| 500/500 [24:03<00:00,  2.89s/it]         \n",
+    "    output tokens:  131427     \n",
+    "    input tokens:  76000    \n",
+    "    prompt tokens:  36    \n",
+    "    total tokens:  207463    \n",
+    "    processed tokens per second:  144     \n",
+    "\n",
+    "\n",
+    "- batch_size = 4   \n",
+    "    100%|██████████| 250/250 [17:45<00:00,  4.26s/it]   \n",
+    "    output tokens:  132261   \n",
+    "    input tokens:  76000   \n",
+    "    prompt tokens:  36   \n",
+    "    total tokens:  208297   \n",
+    "    processed tokens per second:  195   \n",
+    "\n",
+    "\n",
+    "- batch_size = 8   \n",
+    "    100%|██████████| 125/125 [10:14<00:00,  4.92s/it]         \n",
+    "    output tokens:  131263   \n",
+    "    input tokens:  76000   \n",
+    "    prompt tokens:  36   \n",
+    "    total tokens:  207299   \n",
+    "    processed tokens per second:  337   \n",
+    "\n"
    ]
   },
   {
@@ -410,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
