--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -102,25 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/chenzhihan/Library/Python/3.9/lib/python/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -203,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:09<00:00,  1.12it/s]\n"
+      "100%|██████████| 7/7 [00:07<00:00,  1.08s/it]\n"
      ]
     }
    ],
@@ -288,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -298,100 +290,64 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the speaker in the last context?\n",
+       "            <b>Question:</b> Who is the beautiful Helene?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Anna Pavlovna Scherer is the speaker in the last context.\n",
+       "            <b>Answer:</b> The beautiful Helene is Prince Vasili's daughter.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the beautiful Princess Helene grouped with at Anna Pavlovna's reception?\n",
+       "            <b>Question:</b> Who was the elderly lady who approached Prince Vasili in the anteroom?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The beautiful Princess Helene is grouped with the little Princess Bolkonskaya and a group of young people.\n",
+       "            <b>Answer:</b> The elderly lady was Princess Drubetskaya, belonging to one of the best families in Russia.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the author of the story being told?\n",
+       "            <b>Question:</b> What does Prince Hippolyte do after the princess leaves the hall?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The author of the story being told is the vicomte.\n",
+       "            <b>Answer:</b> Prince Hippolyte approaches the little princess and begins to whisper something to her. Then, he hurriedly puts on his cloak and runs out into the porch to follow the princess.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who said, \"I showed them the path to glory, but they did not follow it,\"?\n",
+       "            <b>Question:</b> Who was Pierre staying with at Prince Vasili Kuragin's and sharing a dissipated life with?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Andrew.\n",
+       "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole, whom they were planning to reform by marrying him to Prince Andrew's sister.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What was the theme of Prince Hippolyte's anecdote?\n",
+       "            <b>Question:</b> Who were the visitors that entered the drawing room?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The anecdote Prince Hippolyte told was about a stingy lady from Moscow who had a lady's maid put on a livery and get up behind her carriage when going out.\n",
+       "            <b>Answer:</b> Marya Lvovna Karagina and her daughter entered the drawing room.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was having a conversation about war and a career choice in the last example?\n",
+       "            <b>Question:</b> Who is the countess's youngest girl?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre and Prince Andrew were having a conversation about war and a career choice.\n",
+       "            <b>Answer:</b> Natasha is the countess's youngest girl.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the author of the article \"A Mathematical Theory of Communication\"?\n",
+       "            <b>Question:</b> How old is Natasha when she counts on her fingers in the scene?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Claude E. Shannon.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was living with Anatole?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Dolokhov, an officer of the Semenov regiment, a notorious gambler and duelist.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was being spoken about as the next heir in the conversation?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Vasili.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who were the younger generation that settled down in the drawing room?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The younger generation that settled in the drawing room included Boris, the officer, Anna Mikhaylovna's son; Nicholas, the undergraduate, the count's eldest son; Sonya, the count's fifteen-year-old niece, and little Petya, his youngest boy.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> How many years did Natasha count on her fingers before responding to the proposal? \n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Natasha counted four years on her fingers before responding to the proposal.\n",
+       "            <b>Answer:</b> Natasha counts on her slender little fingers and counts to sixteen.\n",
        "        </div>\n",
        "    </div>\n",
        "    "
@@ -423,11 +379,10 @@
     "html_output = \"\"\n",
     "for o in output:\n",
     "    response = o['output'][0]['response'][0]\n",
-    "    # Assuming the format is 'question: <question>\\nanswer: <answer>'\n",
-    "    question, answer = response.split('\\n')\n",
-    "    # Removing 'question: ' and 'answer: ' prefixes\n",
-    "    question = question.replace('question: ', '')\n",
-    "    answer = answer.replace('answer: ', '')\n",
+    "    # Split the response based on the first occurrence of '\\nanswer'\n",
+    "    split_index = response.find('\\nanswer')\n",
+    "    question = response[:split_index].replace('question: ', '')\n",
+    "    answer = response[split_index:].replace('\\nanswer: ', '')\n",
     "    html_output += format_html_question_answer(question, answer)\n",
     "\n",
     "# Display the formatted HTML\n",
